softwares/devices for user
